# composed

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.arm  LICENSE.txt  README.md  package-lock.json  package.json
manifest/: deployment.yaml  load-balancer.yaml
public/: index.html
scripts/: build_script.sh  build_script_vercel.sh
src/: index.js  styles.css
src/components/: App.js  ComposedFlow.js  ContainerNode.js  EdgeCreatePrompt.js  HostEdge.js  HostNode.js  InitialEdges.js  InitialNodes.js  NodeCreatePrompt.js  PortEdge.js  Styles.js  button.css  container-node.css  flow-styles.css  prompt-styles.css
src/components/ComposePrompt/: ComposePrompt.js
src/components/Controls/: CustomControl.js  custom-controls.css
src/components/Edge/: HostEdge.js  HostEdgeCreatePrompt.js
src/components/Node/: ClickTooltip.js  ContainerNode.js  HostNode.js  InitialNodes.js  NodeCreatePrompt.js  container-node.css
src/components/styles/: Styles.js  container-node.css  flow-styles.css  prompt-styles.css
wasm-parser/: Cargo.toml
wasm-parser/src/: lib.rs  model.rs  parser.rs
