[package]
name = "wasm-parser"
version = "1.0.0"
edition = "2021"
description = "Library containing functions to generate docker-compose configuration string."
repository = "https://github.com/mukkund1996/composed"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.82"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.9"